# vetnode

./: .gitignore  LICENSE  README.md  job-clariden.sh  job-sanity.sh  pyproject.toml  requirements.txt
examples/Slurm-job-with-vetting/: job.sh  simple-config.yaml
examples/image-vet/: config.yaml  image-vet.sh
examples/local-test/: config.yaml  job-vet-local-src.sh  job-vet.sh
examples/slurm-job-with-vetting/: job.sh
examples/slurm-ml-bench/: README.md  all_reduce_bench.py  config.yaml  job-no-vet.sh  job-vet.sh
examples/slurm-ml-vetting/: all_reduce_bench.py  config-allreduce.yaml  config-roundrobin.yaml  config.yaml  job.sh
examples/slurm-node-vetting/: simple-config.yaml
examples/slurm-prolog/: README.md  config.yaml  job.sh  vetnode.sh  vetnode_node_prolog.sh
src/shrike/: __main__.py  cli.py  configuration.py
src/shrike/commands/nvidiasmi/: models.py  nvidia_smi_command.py
src/shrike/evaluations/: base_eval.py  cuda_eval.py  gpu_eval.py  gpu_temperature.py  internet_access.py  models.py  ping.py  random.py
src/vetnode/: __main__.py  cli.py  configuration.py  models.py
src/vetnode/commands/nvidiasmi/: models.py  nvidia-smi-info.tfsm  nvidia_smi_command.py
src/vetnode/commands/scontrol/: models.py  scontrol-hostnames.tfsm  scontrol_command.py
src/vetnode/evaluations/: base_eval.py  cuda_eval.py  cuda_nccl_eval.py  gpu_eval.py  internet_access.py  models.py  nccl_eval.py  nccl_lib_eval.py  nccl_on_rccl_lib_eval.py  nccl_pytorch_eval.py  random.py  rccl_lib_eval.py
templates/: simple-config.yaml
tests/: __init__.py  commands_test.py  conftest.py
tests/mocked_commands/: nvidia-smi-log-A100.txt  nvidia-smi-log-GH200.txt  scontrol-log.txt
