[project]
name = "shrink"  #HealthyNodes #SmoothRun #NodeSelector #FitOnes, #Fitness #OnlyFit #ClusterTherapy
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE.md"]

[project.urls]
Homepage = "https://github.com/theely/shrink"
Issues = "https://github.com/theely/shrink/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"