[project]
name = "VetNode"
version = "0.0.7"
authors = [
  { name="Elia Palme", email="elia.palme@cscs.ch" },
]
description = "A node vetting cli for Distributed Workloads"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click",
    "pydantic",
    "pydantic-settings >= 2.2.0",
    "pydantic-settings[yaml]",
    "textfsm",
    "pip",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/theely/shrink"
Issues = "https://github.com/theely/shrink/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
vetnode = "vetnode.__main__:main"